# jitemania_solutions_previous

./: CMake-verbosity-configuration.cmake  CMakeLists.txt  README.md
_jmsd_experimental/: CMakeLists.txt  README.md
_jmsd_experimental/jmsd_exp_boost_example/: CMakeLists.txt
_jmsd_experimental/jmsd_exp_boost_example/_cmake_settings/: exp-boost-example-set-compiler-settings.cmake
_jmsd_experimental/jmsd_exp_boost_example/_cmake_settings/compiler-settings/: exp-boost-example-set-windows-compiler-settings.cmake
_jmsd_experimental/jmsd_exp_boost_example/exp_boost_example/: CMakeLists.txt
_jmsd_experimental/jmsd_exp_boost_example/sources/exp_boost_example/: exp_boost_example_class.cpp  exp_boost_example_class.h  exp_boost_example_function.c
_jmsd_experimental/jmsd_exp_boost_example/sources/exp_boost_example_main/: exp_boost_example_main_entry.cpp
_jmsd_experimental/jmsd_exp_sfml/: CMakeLists.txt  README.md
_jmsd_experimental/jmsd_exp_sfml/_cmake_settings/: exp-sfml-base-set-compiler-settings.cmake  exp-sfml-derived-set-compiler-settings.cmake  exp-sfml-executable-set-compiler-settings.cmake
_jmsd_experimental/jmsd_exp_sfml/exp_sfml_base_lib/: CMakeLists.txt
_jmsd_experimental/jmsd_exp_sfml/exp_sfml_derived_lib/: CMakeLists.txt
_jmsd_experimental/jmsd_exp_sfml/exp_sfml_executabe/: CMakeLists.txt
_jmsd_experimental/jmsd_exp_sfml/sources/exp_sfml_base/: exp_sfml_base.h  exp_sfml_base_class.cpp  exp_sfml_base_class.h  exp_sfml_base_function.c  exp_sfml_base_function.h  exp_sfml_base_sls.h
_jmsd_experimental/jmsd_exp_sfml/sources/exp_sfml_derived/: exp_sfml_derived.h  exp_sfml_derived_class.cpp  exp_sfml_derived_class.h  exp_sfml_derived_function.c  exp_sfml_derived_function.h  exp_sfml_derived_sls.h
_jmsd_experimental/jmsd_exp_sfml/sources/exp_sfml_executable/: exp_sfml_executable_class.cpp  exp_sfml_executable_class.h  exp_sfml_executable_function.c  exp_sfml_executable_function.h
_jmsd_experimental/jmsd_exp_sfml/sources/exp_sfml_executable_main/: exp_sfml_executable_main_entry.cpp
_jmsd_experimental/jmsd_exp_ssg/: CMakeLists.txt
_jmsd_experimental/jmsd_exp_ssg/_cmake_settings/: exp-ssg-launcher-lib-set-compiler-settings.cmake  exp-ssg-launcher-set-compiler-settings.cmake  exp-ssg-lib-set-compiler-settings.cmake
_jmsd_experimental/jmsd_exp_ssg/_cmake_settings/compiler-settings/: exp-ssg-lib-set-windows-compiler-settings.cmake
_jmsd_experimental/jmsd_exp_ssg/exp_ssg_launcher/: CMakeLists.txt
_jmsd_experimental/jmsd_exp_ssg/exp_ssg_launcher_lib/: CMakeLists.txt
_jmsd_experimental/jmsd_exp_ssg/exp_ssg_lib/: CMakeLists.txt
_jmsd_experimental/jmsd_exp_ssg/sources/_ssg_original_sources/: AI.cpp  AI.h  AllDefinitions.h  Animation.cpp  Animation.h  Bases.cpp  Bases.h  Control.cpp  Control.h  DrawPolygon.cpp  DrawPolygon.h  Filer.cpp  Filer.h  GUI.cpp  GUI.h  Game.cpp  Game.h  Graph2d.cpp  Graph2d.h  Group.cpp  MainGL.cpp  MainGL.h  Menu.cpp  Menu.h  Missiles.cpp  Missiles.h  MyFuns.cpp  MyFuns.h  NetWork.h  Network.cpp  Order.cpp  Order.h  Packer.cpp  Packer.h  Polygon.cpp  Polygon.h  Report.cpp  Report.h  SafeFloat.cpp  SendRecv.cpp  (+25 more)
_jmsd_experimental/jmsd_exp_ssg/sources/exp_ssg_launcher/: exp_ssg_Game_launcher.cpp  exp_ssg_Game_launcher.h
_jmsd_experimental/jmsd_exp_ssg/sources/exp_ssg_launcher_lib/: exp_ssg_Game_launcher_lib.cpp  exp_ssg_Game_launcher_lib.h  exp_ssg_launcher_lib.h  exp_ssg_launcher_lib_sls.h
_jmsd_experimental/jmsd_exp_ssg/sources/exp_ssg_launcher_main/: exp_ssg_launcher_main_entry.cpp
_jmsd_experimental/jmsd_exp_ssg/sources/exp_ssg_lib/: exp_ssg_lib.h  exp_ssg_lib_sls.h
_jmsd_foreign_components/group_media/: CMakeLists.txt
_jmsd_layer_low_components/: CMakeLists.txt  README.md
_jmsd_migration_components/catch2_jmsd/catch_test_lib/: CMakeLists.txt
_jmsd_migration_components/catch2_original/: CMakeLists.txt  README.md
_jmsd_migration_components/catch2_original/_cmake_settings/: catch-lib-set-compiler-settings.cmake
_jmsd_migration_components/catch2_original/catch_lib/: CMakeLists.txt
_jmsd_migration_components/catch2_original/catch_test_lib/: CMakeLists.txt
_jmsd_migration_components/catch2_original/catch_tests/: CMakeLists.txt
_jmsd_migration_components/catch2_original/sources/catch_lib/: catch_lib.h  (+1 more)
_jmsd_migration_components/cmof_jmsd/: CMakeLists.txt  README.md
_jmsd_migration_components/cmof_jmsd/_cmake_settings/: jmsd-testing-cmof-test-lib-set-compiler-settings.cmake  jmsd-testing-cmof-tests-set-compiler-settings.cmake  jmsd-testing-ctf-lib-set-compiler-settings.cmake  jmsd-testing-ctf-test-lib-set-compiler-settings.cmake  jmsd-testing-cutf-set-compiler-settings.cmake  jmsd-testing-cutf-test-lib-set-compiler-settings.cmake  jmsd-testing-cutf-tests-set-compiler-settings.cmake
_jmsd_migration_components/cmof_jmsd/_documentation/: current-actions.txt  open_documents.bat  open_documents.sh  strategic-plan.txt  transformation-priority-premise.txt
_jmsd_migration_components/cmof_jmsd/cmof/: CMakeLists.txt
_jmsd_migration_components/cmof_jmsd/cmof_test_lib/: CMakeLists.txt
_jmsd_migration_components/cmof_jmsd/cmof_tests/: CMakeLists.txt
_jmsd_migration_components/cmof_jmsd/ctf_lib/: CMakeLists.txt
_jmsd_migration_components/cmof_jmsd/ctf_test_lib/: CMakeLists.txt
_jmsd_migration_components/cmof_jmsd/ctf_test_lib_old/: CMakeLists.txt
_jmsd_migration_components/cmof_jmsd/ctf_tests_old/: CMakeLists.txt
_jmsd_migration_components/cmof_jmsd/cutf/: CMakeLists.txt
_jmsd_migration_components/cmof_jmsd/cutf_test_lib/: CMakeLists.txt
_jmsd_migration_components/cmof_jmsd/cutf_tests/: CMakeLists.txt
_jmsd_migration_components/cmof_original/: CMakeLists.txt  README.md
_jmsd_migration_components/cmof_original/_cmake_settings/: jmsd-testing-cmof-set-compiler-settings.cmake  jmsd-testing-ctf-tests-set-compiler-settings.cmake
_jmsd_migration_components/cmof_original/cmof/: CMakeLists.txt
_jmsd_migration_components/cmof_original/ctf_lib/: CMakeLists.txt
_jmsd_migration_components/cmof_original/ctf_test_lib/: CMakeLists.txt
_jmsd_migration_components/cmof_original/ctf_tests/: CMakeLists.txt
(+1217 files in other folders)
